Update stessa 2 seed file (detail_headers string and app.title). Dimensions missing a translation no longer causes server exception on the tree show page (use new helper method html_safe_translations instead of variableName.html_safe). Fix bug on relations page from sequence.js (applies relationship option was broken in add/edit treetree modal). Add modifier to css-selector, 'login-bg.' The current treetype. The 'login-bg' element also gets a class 'login-bg--#{@treeTypeRec.code.downcase}'. Right now we are adding special styles to the login header when the selector .login-bg--tfv is present

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -22,10 +22,12 @@ body {
     }
     h1 {
       font-size: 5em;
-      font-weight: bold;
       max-width: 60%;
       margin: auto;
       color: red;
+    }
+    &.login-bg--tfv h1 {
+      font-weight: bold;
       text-shadow: 0 0 10px black;
     }
     .login-form {
